TQ3lib-clean/isoC-Sigli/tqintf.h

	void c_tqgetv(char *, int , int , int *, double *, void *);                   // get equilibrium results using state variables
    void c_tqsetc(char *, int, int , double, int *, void *);                     // set condition
	void c_tqce(char *, int , int , double *, void *);                            // calculate quilibrium with possible target
    //void c_getG(int, void *);
    //void c_calcg(int, int, int, int, void *);
    void c_tqgphc1(int, int * , int *, int *, double *, double *, double *,
                                                                        void *);
    void c_tqsphc1(int, double *, double *, void *);