TQ4lib/Cpp/Matthias/liboctqcpp.h

    void c_tqgpcs(int, int, double *, double *, void *);
    void c_tqgccf(int, int *, char *, double *, double *, void *);
    void c_tqgnpc(int, int *, void *);